Fixed problem with bottom scrollbar when animation start and added animations to Benefits and LatestReviews

--- a/client/src/scss/components/_about.scss
+++ b/client/src/scss/components/_about.scss
@@ -1,6 +1,7 @@
 .about {
     width: 100%; 
     height: 778px;
+    overflow: hidden;
     .about-container {
         display: flex;
         justify-content: space-between;
