--- a/client/src/scss/components/_header.scss
+++ b/client/src/scss/components/_header.scss
@@ -1,5 +1,6 @@
 header {
     font-family: $font-roboto;
+    overflow: hidden;
     .main-header-wrapper {
         display: flex;
         justify-content: space-between;
