--- a/client/src/scss/components/_latestReviews.scss
+++ b/client/src/scss/components/_latestReviews.scss
@@ -2,6 +2,7 @@
     height: 800px;
     padding-top: 55px;
     background-color: #734ac3;
+    overflow: hidden;
     .latest-reviews-boxes {
         width: 1250px;
         margin: 0 auto;
